--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="Studio">Studio</a></li>
-          <li><a href="Portfolio">Potfolio</a></li>
+          <li><a>Potfolio</a></li>
           <li><a href="Contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -30,7 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2></h2>
+        <h2>Lorem ipsum</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -67,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="images/computer.jpg"
+              src="./images/computer.jpg"
               alt="Monitor"
               width="360"
               height="300"
@@ -75,7 +73,7 @@
           </li>
           <li>
             <img
-              src="images/phonescreen.jpg"
+              src="./images/phonescreen.jpg"
               alt="A phone with four screenshots"
               width="360"
               height="300"
@@ -83,7 +81,7 @@
           </li>
           <li>
             <img
-              src="images/phone.jpg"
+              src="./images/phone.jpg"
               alt="A man's hand with a phone in his hand, and in the background there is a computer on the table"
               width="360"
               height="300"
@@ -96,7 +94,7 @@
         <ul>
           <li>
             <img
-              src="images/mg.jpg"
+              src="./images/mg.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
               height="260"
@@ -106,7 +104,7 @@
           </li>
           <li>
             <img
-              src="images/tf.jpg"
+              src="./images/tf.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
               height="260"
@@ -116,7 +114,7 @@
           </li>
           <li>
             <img
-              src="images/cg.jpg"
+              src="./images/cg.jpg"
               alt="Camila Garcia Marketing"
               width="264"
               height="260"
@@ -126,7 +124,7 @@
           </li>
           <li>
             <img
-              src="images/dw.jpg"
+              src="./images/dw.jpg"
               alt="Daniel Wilson UI Designer"
               width="264"
               height="260"
